# wiredtiger-rs

./: .gitignore  Cargo.toml  build.rs
examples/: simple.rs
src/: error.rs  lib.rs  raw.rs
wiredtiger-sys/: Cargo.toml  README.md  build.rs  justfile
wiredtiger-sys/examples/: simple.rs
wiredtiger-sys/src/: lib.rs
