[package]
name = "wiredtiger-rs"
version = "0.3.1-rc1" # libwiredtiger v3.1.0
description = "Rust bindings for libwiredtiger"
edition = "2021"
license = "MIT"

[dependencies]
wiredtiger-sys = { path = "wiredtiger-sys", version = "0.3.1-rc1" } # should always match our version

[dev-dependencies]
anyhow = "1.0.86"
tempfile = "3.12.0"
