[package]
name = "wiredtiger-rs"
version = "0.3.1-rc2" # libwiredtiger v3.1.0
description = "Rust bindings for libwiredtiger"
edition = "2021"
license = "MIT"
homepage = "https://github.com/ryanpbrewster/wiredtiger-rs"
repository = "https://github.com/ryanpbrewster/wiredtiger-rs"

[dependencies]
wiredtiger-sys = { path = "wiredtiger-sys", version = "0.3.1-rc1" } # should match our major/minor/patch

[dev-dependencies]
anyhow = "1.0.86"
tempfile = "3.12.0"
