[package]
name = "wiredtiger-rs"
version = "0.10.0-rc0" # libwiredtiger v10.0.0
description = "Rust bindings for libwiredtiger"
edition = "2021"
license = "MIT"
homepage = "https://github.com/ryanpbrewster/wiredtiger-rs"
repository = "https://github.com/ryanpbrewster/wiredtiger-rs"

[dependencies]
wiredtiger-sys = { path = "wiredtiger-sys", version = "0.10.0-rc0" } # should match our major/minor/patch

[dev-dependencies]
anyhow = "1.0.86"
tempfile = "3.12.0"
