[package]
name = "wiredtiger-sys"
description = "Low-level Rust bindgen wrapper around libwiredtiger"
version = "0.10.0-rc0" # libwiredtiger v10.0.0
edition = "2021"
build = "build.rs"
license = "MIT"
homepage = "https://github.com/ryanpbrewster/wiredtiger-rs"
repository = "https://github.com/ryanpbrewster/wiredtiger-rs"

[build-dependencies]
bindgen = "0.70.0"
